添加了UI界面 完善Node结构 添加深度搜索和A*搜索(未完成)